# colorized_mesh_display

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/colorized_mesh_display/: colorized_mesh_display.h  colorized_mesh_visual.h
src/: colorized_mesh_display.cpp  colorized_mesh_display_test.cpp  colorized_mesh_visual.cpp
